linked up the different views, fixed some issues with templates and some inconsistencies

--- a/templates/project/add_toilet.html
+++ b/templates/project/add_toilet.html
@@ -11,6 +11,6 @@
 
     <! cancel >
     <div>
-        <li><a href="{% url 'home' %}">Cancel</a></li>
+        <li><a href="{% url 'index' %}">Cancel</a></li>
     </div>
 {% endblock %}
