--- a/templates/project/show_toilet.html
+++ b/templates/project/show_toilet.html
@@ -5,7 +5,7 @@
 
     <! home >
     <div>
-        <li><a href="{% url 'home' %}">Home</a></li>
+        <li><a href="{% url 'index' %}">Home</a></li>
     </div>
 
     <! rate - LINKED TO ADD TOILET >
