--- a/templates/project/sign_up.html
+++ b/templates/project/sign_up.html
@@ -5,12 +5,12 @@
 
     <! done >
     <div>
-        <li><a href="{% url 'home' %}">Sign Up</a> </li>
+        <li><a href="{% url 'index' %}">Sign Up</a> </li>
     </div>
 
     <! cancel >
     <div>
-        <li><a href="{% url 'home' %}">Cancel</a> </li>
+        <li><a href="{% url 'index' %}">Cancel</a> </li>
     </div>
 
 {% endblock %}
