--- a/templates/project/home.html
+++ b/templates/project/home.html
@@ -16,12 +16,16 @@
 
     <! list of toilets >
     <div>
-    {% if toilets %}
+    {% if bathrooms %}
         <ul>
-        {% for toilet in toilets %}
-            <a href="{% url 'show_toilet' toilet.slug %}">{{ toilet.name }}</a>
-        {% endfor %}
+            {% for bathroom in bathrooms %}
+                <li>
+                    {{ bathroom.name }}
+                </li>
+            {% endfor %}
         </ul>
+    {% else %}
+        <strong>There are no bathrooms present...</strong>
     {% endif %}
     </div>
 {% endblock %}
