--- a/templates/project/base.html
+++ b/templates/project/base.html
@@ -5,9 +5,10 @@
         <meta charset="UTF-8">
         <title>
             {%  block title_block %}
-
+                Rate yo uni
             {%  endblock %}
         </title>
+        hallo
     </head>
     <body>
         {%  block body_block %}
