--- a/templates/project/base.html
+++ b/templates/project/base.html
@@ -5,10 +5,9 @@
         <meta charset="UTF-8">
         <title>
             {%  block title_block %}
-                Rate yo uni
+                Rate yo' uni
             {%  endblock %}
         </title>
-        hallo
     </head>
     <body>
         {%  block body_block %}
