--- a/templates/project/home.html
+++ b/templates/project/home.html
@@ -1,31 +1,32 @@
 {% extends 'project/base.html' %}
 {% load staticfiles %}
 
+{% block title_block %} Home {% endblock %}
+
 {% block body_block %}
     <h1>Rate Yo' Uni</h1>
 
-    <! signing up >
-    <div>
-        <li><a href="{% url 'sign_up' %}">Sign Up</a></li>
-    </div>
-
-    <! add a page >
-    <div>
-        <li><a href="{% url 'add_toilet' %}">Add New Toilet</a> </li>
     </div>
 
     <! list of toilets >
     <div>
     {% if bathrooms %}
-        <ul>
+        <ul style="list-style-type:none;">
             {% for bathroom in bathrooms %}
-                <li>
-                    {{ bathroom.name }}
-                </li>
+                <li><a href="{% url 'show_toilet' bathroom.1 %}">{{ bathroom.0 }}</a></li>
             {% endfor %}
         </ul>
     {% else %}
         <strong>There are no bathrooms present...</strong>
     {% endif %}
+    </div>
+
+    <div>
+        <! signing up >
+         <li><a href="{% url 'sign_up' %}">Sign Up</a></li>
+        <! add a page >
+         <li><a href="{% url 'add_toilet' %}">Add New Toilet</a> </li>
+        <! Sign in >
+        <li>Sign In</li>
     </div>
 {% endblock %}
