--- a/templates/project/show_toilet.html
+++ b/templates/project/show_toilet.html
@@ -1,74 +1,41 @@
 {% extends 'project/base.html' %}
 {% load staticfiles %}
 
-{% block style_block %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bathroom.css' %}">
-{% endblock %}
-
 {% block body_block%}
 
     {% if toilet %}
 
-        <div style="width: 100%; position: center;">
-            Building: <strong>{{ toilet.building }}</strong>
-            Floor: <strong> {{ toilet.level }}</strong>
-            Gender: <strong>{{ toilet.gender }}</strong>
+        <div>
+            <a href="" alt="Building">{{ toilet.building }}</a>
+            Floor: <a href="" alt="Level"> {{ toilet.level }}</a>
+            <a href="" alt="Gender">{{ toilet.gender }}</a>
         </div>
 
         <div>
-            {% if images %}
-                {% for i in images %}
-                    <img src="{{ i.image }}" style="width: 200px; height: 400px;">
+            {% comment %}<ul>
+                {% for image in toilet.images %}
+                    <!--<li><img src="{{ image }}"></li>-->
                 {% endfor %}
-            {% else %}
-            {% endif %}
+            </ul>{% endcomment %}
         </div>
 
         <div>
-            <h2>Rating: {{ rating }}</h2>
+            <h2>Rating: </h2>
             <!-- JS and CSS -->
-            <button id="ratingBtn">Rate</button>
+            <button>Rate</button>
+        </div>
+
+        <div>
             <h2>Comments: </h2>
             <!-- JS and CSS -->
-            {% if interaction %}
-                {% for comment in interaction %}
-                {% endfor %}
-            {% else %}
-                There are no comments yet, make a comment...
-            {% endif %}
-            <button id="commentBtn">Comment</button>
-        </div>
-        <div class="modal-content">
-            <div id="ratingModal" class="modal">
-                <fieldset class="rating">
-                    <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
-                    <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-                    <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-                    <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-                    <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
-                    <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-                    <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
-                    <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-                    <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
-                    <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
-                </fieldset>
-                <span class="close">&times;</span>
-            </div>
-            <div class="modal" id="commentModal">
-                <textarea>Make your comment...</textarea>
-                <input type="submit" value="Submit">
-                <span class="close">&times;</span>
-            </div>
+            <textarea>Make your comment...</textarea>
+            <input type="submit" value="Submit">
         </div>
 
         <div>
-            <li style="list-style: none;"><a href="{% url 'index' %}">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
         </div>
 
     {% endif %}
 
-{% endblock %}
-
-{% block script_block %}
-    <script src="{% static 'modal.js' %}"></script>
 {% endblock %}
