--- a/templates/project/show_toilet.html
+++ b/templates/project/show_toilet.html
@@ -1,10 +1,6 @@
 {% extends 'project/base.html' %}
 {% load staticfiles %}
 
-{% block style_block %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bathroom.css' %}">
-{% endblock %}
-
 {% block body_block%}
 
     {% if toilet %}
@@ -30,45 +26,22 @@
             <button id="ratingBtn">Rate</button>
             <h2>Comments: </h2>
             <!-- JS and CSS -->
-            {% if interaction %}
-                {% for comment in interaction %}
+            {% if comments %}
+                {% for comment in comments %}
+                    {{ comment.comment }} by {{ comment.user }} @ {{ comment.date }}
                 {% endfor %}
             {% else %}
                 There are no comments yet, make a comment...
             {% endif %}
             <button id="commentBtn">Comment</button>
         </div>
-        <div class="modal-content">
-            <div id="ratingModal" class="modal">
-                <fieldset class="rating">
-                    <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
-                    <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-                    <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-                    <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-                    <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
-                    <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-                    <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
-                    <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-                    <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
-                    <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
-                </fieldset>
-                <span class="close">&times;</span>
-            </div>
-            <div class="modal" id="commentModal">
-                <textarea>Make your comment...</textarea>
-                <input type="submit" value="Submit">
-                <span class="close">&times;</span>
-            </div>
-        </div>
+
 
         <div>
             <li style="list-style: none;"><a href="{% url 'index' %}">Home</a></li>
         </div>
-
+    {% else %}
+        Couldn't find this bathroom!
     {% endif %}
 
-{% endblock %}
-
-{% block script_block %}
-    <script src="{% static 'modal.js' %}"></script>
 {% endblock %}
