--- a/templates/project/home.html
+++ b/templates/project/home.html
@@ -9,7 +9,7 @@
     <br>
     <br>
     <br>
-<div id="content">
+<div id="content" align="center">
     <! list of toilets >
     <div id="newlyadded">
     {% if bathrooms %}
@@ -59,12 +59,5 @@
         <li>Sign In</li>
     </div>
 </div>
-    <style>
-        #content{
-                    clear: left;
-                    width 100%
-                    background-color: red;
 
-                }
-    </style>
 {% endblock %}
