--- a/templates/project/add_toilet.html
+++ b/templates/project/add_toilet.html
@@ -2,15 +2,28 @@
 {% load staticfiles %}
 
 {% block body_block %}
-    <h1>Add a Toilet</h1>
-
-    <! create toilet >
-    <div>
-        <li><a href="{% url 'show_toilet' toilet.slug %}">Finished</a></li>
-    </div>
+    <h1 align="center">Add a Toilet</h1>
 
     <! cancel >
     <div>
-        <li><a href="{% url 'home' %}">Cancel</a></li>
+        <li><a href="{% url 'index' %}">Cancel</a></li>
+    </div>
+
+    <div align="center">
+        <form id="bathroom_form" method="post" action="/RateYoUni/add_toilet/">
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+            <br>
+                {{ hidden }}
+            {% endfor %}
+
+            {% for field in form.visible_fields %}
+            <br>
+                {{ field.errors }}
+                {{ field.help_text }}
+                {{ field }}
+            {% endfor %}
+            <input type="submit" name="submit" value="Add Toilet"/>
+        </form>
     </div>
 {% endblock %}
