--- a/templates/project/sign_up.html
+++ b/templates/project/sign_up.html
@@ -3,14 +3,19 @@
 
 {%  block body_block %}
 
-    <! done >
-    <div>
-        <li><a href="{% url 'home' %}">Sign Up</a> </li>
-    </div>
+   <h1>Sign Up</h1>
 
-    <! cancel >
-    <div>
-        <li><a href="{% url 'home' %}">Cancel</a> </li>
-    </div>
+    {% if registered %}
+        Thanks for signing up!
+        <a href="{% url 'index' %}">Return to homepage</a><br />
+    {% else %}
+        <form id="user_form" method="post" action="{% url 'sign_up' %}"
+              enctype="multipart/form-data">
+        {% csrf_token %}
+            {{ user_form.as_p }}
+            {{ profile_form.as_p }}
+            <input type="submit" name="submit" value="Register" />
+        </form>
+    {% endif %}
 
 {% endblock %}
