--- a/templates/project/toilet.html
+++ b/templates/project/toilet.html
@@ -1,16 +1,60 @@
 {% extends 'project/base.html' %}
 {% load staticfiles %}
 
+{% block style_block %}
+    <link rel="stylesheet" type="text/css" href="{% static 'bathroom.css' %}">
+{% endblock %}
+{% block script_block %}
+    <script src="{% static 'modal.js' %}"></script>
+{% endblock %}
+
 {% block body_block%}
 
-    <! home >
-    <div>
-        <li><a href="{% url 'home' %}">Home</a></li>
-    </div>
+    {% if toilet %}
+        {% if user.is_authenticated %}
 
-    <! rate - LINKED TO ADD TOILET >
-    <div>
-    <li><a href="{% url 'add_toilet' %}">Rate</a></li>
-    </div>
+        <div style="width: 100%; position: center;">
+            Building: <strong>{{ toilet.building }}</strong>
+            Floor: <strong> {{ toilet.level }}</strong>
+            Gender: <strong>{{ toilet.gender }}</strong>
+        </div>
+
+        <div>
+            {% if images %}
+                {% for i in images %}
+                    <img src="{{ i.image }}" style="width: 200px; height: 400px;">
+                {% endfor %}
+            {% else %}
+            {% endif %}
+        </div>
+
+        <a>
+            <h2 id="ratingCurrent">Rating: </h2>
+            {% if rating.rating__avg is None %}
+                There are no ratings!
+            {% else %}
+                {{ rating.rating__avg }}
+            {% endif %}
+            
+            <!-- JS and CSS -->
+            <a href="{% url 'rate' toilet.bSlug %}"><button>Rate!</button></a>
+            <h2>Comments: </h2>
+            <!-- JS and CSS -->
+            {% if comments %}
+                {% for comment in comments %}
+                    {{ comment }}
+                {% endfor %}
+            {% else %}
+                There are no comments yet, make a comment...
+            {% endif %}
+            <a href="{% url 'comment' toilet.bSlug %}"><button>Comment</button></a>
+        </div>
+
+        <div>
+            <li style="list-style: none;"><a href="{% url 'index' %}">Home</a></li>
+        </div>
+
+        {% endif %}
+    {% endif %}
 
 {% endblock %}
