--- a/templates/project/base.html
+++ b/templates/project/base.html
@@ -2,6 +2,7 @@
 {% load staticfiles %}
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="{% static "css/base.css" %}">
         <meta charset="UTF-8">
         <title>
             {%  block title_block %}
@@ -10,17 +11,22 @@
         </title>
     </head>
     <body>
-        <div id="menubar">
+    <div id="header"><h1><strong>Rate Yo Uni</strong></h1></div>
 
-            <div id="title" align="center">
-                <h1><strong>Rate Yo Uni</strong></h1>
+            <div id="menubar" align="center">
+                <div id="home" class="menuitem"><a href="{% url 'home' $} ">Home</a> </div>
+
+                <div id ="add" class="menuitem"><a href="{% url 'add_toilet' %}">Add New Toilet</a></div>
+
+                <div id="signup" class="menuitem"><a href="{% url 'sign_up' %}">Sign Up</a></div>
+
+                 <div id="searchbar"><input type="text" id="search" onkeyup="searchFunction()" placeholder="Search for toilet..." title="search toilet"> </div>
+
             </div>
 
-            <div id ="add" ><a href="{% url 'add_toilet' %}">Add New Toilet</a></div>
 
-            <div id="signup"><a href="{% url 'sign_up' %}">Sign Up</a></div>
 
-        </div>
+
         <div id="content" back>
             {%  block body_block %}
 
