--- a/templates/project/base.html
+++ b/templates/project/base.html
@@ -19,6 +19,8 @@
                 <div id ="add" class="menuitem"><a href="{% url 'add_toilet' %}">Add New Toilet</a></div>
 
                 <div id="signup" class="menuitem"><a href="{% url 'sign_up' %}">Sign Up</a></div>
+                
+                <div id="login" class="menuitem"><a href="{% url 'user_login' %}">Login</a></div>
 
                  <div id="searchbar"><input type="text" id="search" onkeyup="searchFunction()" placeholder="Search for toilet..." title="search toilet"> </div>
 
