--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,34 @@
+#filterlabel{
+    align-text: center;
+    float: center;
+    margin-left: 45%;
+    width: 10%;
+    padding: 1px;
 
+    background-color: #888888
+}
+
+#dropdownfilter {
+    display: none;
+    margin-left: 25%;
+    float: center;
+    background-color: #888888;
+    width: 50%;
+    box-shadow: 0px, 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+#dropdownfilter input[type=text]{
+    margin-left: 25%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border: none;
+    font-size: 20px;
+    height: 20px;
+    width: 50%;
+}
 
 .toiletitem{
     float: center;
