--- a/templates/project/home.html
+++ b/templates/project/home.html
@@ -5,16 +5,32 @@
 
 {% block body_block %}
 <link rel="stylesheet" href="{% static "css/home.css" %}">
-    <br>
-    <br>
-    <br>
-    <br>
-    <! list of toilets >
-    <div id="toiletshower">
-    {% if bathrooms %}
+    <div id="filterbar">
+
+        <div id="dropdownfilter">
+            <form type="get" action="." style="margin:0">
+                {% csrf_token %}
+                <input id="search_box" type="text" name="search_box" placeholder="Search here..."><br>
+                Sort on:
+                <select name="select_sort">
+                    <option value="name">ABC</option>
+                    <option value="-rating">Rating</option>
+                </select>
 
 
-            {% for bathroom in bathrooms %}
+                <input type="submit" style="display: none;"/>
+            </form>
+        </div>
+
+        <div id="filterlabel">
+            <p align="center">Press here to filter</p>
+        </div>
+
+    </div>
+
+    <div id="toiletshower" >
+        {% if bathroom_list %}
+            {% for bathroom in bathroom_list %}
                 <div class="toiletitem">
                     <div class="toilettext">
                         <h3>{{bathroom.0}}</h3>   <br>
@@ -28,40 +44,16 @@
                     </div>
                     <div class="toiletrating"> Rating: {{bathroom.3}}</div>
                 </div>
-
             {% endfor %}
 
-    {% else %}
-        <strong>There are no bathrooms present...</strong>
-    {% endif %}
-    </div>
-
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <div id="searchbar">
-        <form type="get" action="." style="margin:0">
-            {% csrf_token %}
-            <input id="search_box" type="text" name="search_box" placeholder="Search here...">
-            <button id="search_submit" type="submit">Search</button>
-        </form>
-        {% if searchresponse %}
-
-            <ul>
-                {% for item in searchresponse %}
-                    <li><a href="{% url 'show_toilet' item.1 %}">{{ item.0 }}</a></li>
-                {% endfor %}
-            </ul>
         {% else %}
-            <strong>No bathroom found</strong>
+            <strong>There are no bathrooms present...</strong>
         {% endif %}
+
     </div>
+
     <br>
-    <br>
-    <br>
-    <br>
+
 
     <div >
         <! signing up >
@@ -70,5 +62,17 @@
          <li><a href="{% url 'add_toilet' %}">Add New Toilet</a> </li>
  
     </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+    $("#filterlabel").click(function(){
+        $("#dropdownfilter").slideToggle("slow");
+    });
+});
+</script>
+
+
+
 
 {% endblock %}
