--- a/templates/project/rate.html
+++ b/templates/project/rate.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rate</title>
-</head>
-<body>
+{% extends 'project/base.html' %}
+{% load staticfiles %}
+
+{% block title_block%}
+    Rate!
+{% endblock %}
+
+{% block body_block %}
     {% if user.is_authenticated %}
         {% if toilet %}
             <form id="rating_form" method="post" action="/RateYoUni/bathrooms/{{ toilet.bSlug }}/rate/">
                 {% csrf_token %}
-                {% for hidden in form.hidden_fields %}
-                    {{ hidden }}
-                {% endfor %}
                 <input type="text" value="{{ user }}" id="user" style="visibility: hidden">
                 <input type="text" value="{{ toilet }}" id="bathroom" style="visibility: hidden">
-                <input type="number" id="rating">
+                Rate: <br>
+                {{ form.rating }}
                 <input type="submit" name="submit" value="Add rating"/>
             </form>
         {% endif %}
@@ -22,5 +21,5 @@
         As you are not logged in you can't carry out this action!
     {% endif %}
     <a href="{% url 'show_toilet' toilet.bSlug %}">Go Back</a>
-</body>
-</html>
+{% endblock %}
+
