--- a/templates/project/show_toilet.html
+++ b/templates/project/show_toilet.html
@@ -1,10 +1,20 @@
 {% extends 'project/base.html' %}
 {% load staticfiles %}
 
+{% block title_block %}
+    Bathroom - {% if toilet %} {{ toilet.bSlug }} {% else %} None {% endif %}
+{% endblock %}
+
+{% block external_block %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="{% static 'modal.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'bathroom.css' %}">
+{% endblock %}
+
 {% block body_block%}
 
     {% if toilet %}
-        {% if user.is_authenticated %}
+
 
         <div style="width: 100%; position: center;">
             Building: <strong>{{ toilet.building }}</strong>
@@ -12,7 +22,7 @@
             Gender: <strong>{{ toilet.gender }}</strong>
         </div>
 
-        <div>
+        <div class="Left">
             {% if images %}
                 {% for i in images %}
                     <img src="{{ i.image }}" style="width: 200px; height: 400px;">
@@ -21,18 +31,16 @@
             {% endif %}
         </div>
 
-        <div>
-            <h2 id="ratingCurrent">Rating: </h2>
-            {% if rating.rating__avg is None %}
+        <div class="Right">
+            <button id="show">Rate/Comment</button>
+            <h2>Rating: </h2>
+            {% if b.rating is None %}
                 There are no ratings!
             {% else %}
-                {{ rating.rating__avg }}
+                {{ b.rating }}
             {% endif %}
 
-            <!-- JS and CSS -->
-            <a href="{% url 'rate' toilet.bSlug %}"><button>Rate!</button></a>
             <h2>Comments: </h2>
-            <!-- JS and CSS -->
             {% if comments %}
                 {% for comment in comments %}
                     {{ comment }}
@@ -40,14 +48,37 @@
             {% else %}
                 There are no comments yet, make a comment...
             {% endif %}
-            <a href="{% url 'comment' toilet.bSlug %}"><button>Comment</button></a>
         </div>
+
+        {% comment %}<div id="modal" hidden>
+            {% if user.is_authenticated %}
+                <form method="post" id="comment_form">
+                    {% csrf_token %}
+                    <input type="text" value="{{ user }}" id="user" style="visibility: hidden">
+                    <input type="text" value="{{ toilet }}" id="bathroom" style="visibility: hidden">
+                    <textarea id="comment"></textarea>
+                    <input type="submit" name="submit" value="Add Comment"/>
+                </form>
+                <br>
+                <form method="post" id="rating_form">
+                    {% csrf_token %}
+                    <input type="text" value="{{ user }}" id="user" style="visibility: hidden">
+                    <input type="text" value="{{ toilet }}" id="bathroom" style="visibility: hidden">
+                    <input type="number" id="rate">
+                    <input type="submit" name="submit" value="Add Rating"/>
+                </form>
+            {% else %}
+                You aren't sign in so you can't carry out this action!
+            {% endif %}
+        </div>{% endcomment %}
 
         <div>
             <li style="list-style: none;"><a href="{% url 'index' %}">Home</a></li>
         </div>
 
-        {% endif %}
+
+    {% else %}
+        There seems to be an error in the bathroom id as this hasn't lead to a bathroom!
     {% endif %}
 
 {% endblock %}
