--- a/templates/project/base.html
+++ b/templates/project/base.html
@@ -2,21 +2,39 @@
 {% load staticfiles %}
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static "css/base.css" %}">
         <meta charset="UTF-8">
         <title>
             {%  block title_block %}
                 Rate yo' uni
             {%  endblock %}
         </title>
-        {% block style_block %}
-        {% endblock %}
     </head>
     <body>
-        {%  block body_block %}
+    <div id="header"><h1><strong>Rate Yo Uni</strong></h1></div>
 
-        {% endblock %}
-        {% block script_block %}
-        {% endblock %}
+            <div id="menubar" align="center">
+                <div id="home" class="menuitem"><a href="{% url 'home' $} ">Home</a> </div>
+
+                <div id ="add" class="menuitem"><a href="{% url 'add_toilet' %}">Add New Toilet</a></div>
+
+                <div id="signup" class="menuitem"><a href="{% url 'sign_up' %}">Sign Up</a></div>
+                
+                <div id="login" class="menuitem"><a href="{% url 'user_login' %}">Login</a></div>
+
+                 <div id="searchbar"><input type="text" id="search" onkeyup="searchFunction()" placeholder="Search for toilet..." title="search toilet"> </div>
+
+            </div>
+
+
+
+
+        <div id="content" back>
+            {%  block body_block %}
+
+            {% endblock %}
+        </div>
+
+
     </body>
 </html>
