--- a/templates/project/home.html
+++ b/templates/project/home.html
@@ -8,7 +8,7 @@
     <div id="filterbar">
 
         <div id="dropdownfilter">
-            <form type="get" action="." style="margin:0">
+            <form type="get" id="filter_form" name="filterform" action="." style="margin:0">
                 {% csrf_token %}
                 <input id="search_box" type="text" name="search_box" placeholder="Search here..."><br>
                 Sort on:
@@ -18,7 +18,7 @@
                 </select>
 
 
-                <input type="submit" style="display: none;"/>
+                <input type="submit" name="searchsubmit" value="search_request" style="display: none;"/>
             </form>
         </div>
 
