--- a/templates/project/home.html
+++ b/templates/project/home.html
@@ -4,29 +4,75 @@
 {% block title_block %} Home {% endblock %}
 
 {% block body_block %}
-    <h1>Rate Yo' Uni</h1>
+<link rel="stylesheet" href="{% static "css/home.css" %}">
+    <div id="filterbar">
+
+        <div id="dropdownfilter">
+            <form type="get" action="." style="margin:0">
+                {% csrf_token %}
+                <input id="search_box" type="text" name="search_box" placeholder="Search here..."><br>
+                Sort on:
+                <select name="select_sort">
+                    <option value="name">ABC</option>
+                    <option value="-rating">Rating</option>
+                </select>
+
+
+                <input type="submit" style="display: none;"/>
+            </form>
+        </div>
+
+        <div id="filterlabel">
+            <p align="center">Press here to filter</p>
+        </div>
 
     </div>
 
-    <! list of toilets >
-    <div>
-    {% if bathrooms %}
-        <ul style="list-style-type:none;">
-            {% for bathroom in bathrooms %}
-                <li><a href="{% url 'show_toilet' bathroom.1 %}">{{ bathroom.0 }}</a></li>
+    <div id="toiletshower" >
+        {% if bathroom_list %}
+            {% for bathroom in bathroom_list %}
+                <div class="toiletitem">
+                    <div class="toilettext">
+                        <h3>{{ bathroom.name }}</h3>   <br>
+                        <a href="{% url 'show_toilet' bathroom.b_slug %}">{{ bathroom.name }}</a>    <br>
+                        Building: {{ bathroom.building }}.<br>
+                        Level: {{ bathroom.level }}. <br>
+                        Gender: {{ bathroom.gender }}.
+                    </div>
+                    <div class="toiletimage">
+                        <img src="{% static "images/toilet.jpg"%}" style="max-width:100%;">
+                    </div>
+                    <div class="toiletrating"> Rating: {{ bathroom.rating }}</div>
+                </div>
             {% endfor %}
-        </ul>
-    {% else %}
-        <strong>There are no bathrooms present...</strong>
-    {% endif %}
+
+        {% else %}
+            <strong>There are no bathrooms present...</strong>
+        {% endif %}
+
     </div>
 
-    <div>
+    <br>
+
+
+    <div >
         <! signing up >
          <li><a href="{% url 'sign_up' %}">Sign Up</a></li>
         <! add a page >
          <li><a href="{% url 'add_toilet' %}">Add New Toilet</a> </li>
-        <! Sign in >
-        <li>Sign In</li>
+ 
     </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+    $("#filterlabel").click(function(){
+        $("#dropdownfilter").slideToggle("slow");
+    });
+});
+</script>
+
+
+
+
 {% endblock %}
