--- a/templates/project/show_toilet.html
+++ b/templates/project/show_toilet.html
@@ -2,73 +2,56 @@
 {% load staticfiles %}
 
 {% block style_block %}
-    <link rel="stylesheet" type="text/css" href="{% static 'bathroom.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'css/bathroom.css' %}">
 {% endblock %}
+
+{% block script_block %}
+    <script src="{% static 'js/bathroom.js' %}"></script>
+{% endblock%}
 
 {% block body_block%}
 
     {% if toilet %}
 
-        <div style="width: 100%; position: center;">
-            Building: <strong>{{ toilet.building }}</strong>
-            Floor: <strong> {{ toilet.level }}</strong>
-            Gender: <strong>{{ toilet.gender }}</strong>
+        <div id="top">
+            <h1>Building: {{ toilet.building }} / Floor: {{ toilet.level }} / Gender: {{ toilet.get_gender_display }}</h1>
         </div>
 
-        <div>
+        <div class="Left">
             {% if images %}
-                {% for i in images %}
-                    <img src="{{ i.image }}" style="width: 200px; height: 400px;">
-                {% endfor %}
+                <div class="containImages">
+                    {% for i in images %}
+                        <div class="imageSlides">
+                            {% with 'images/bathrooms/'|add:i.image as image %}
+                                <img src="{% static image %}"
+                                    alt="{{ i.name }}" style="width: 100%;">
+                            {% endwith %}
+                        </div>
+                    {% endfor %}
+                    <a class="prev" onclick="plusSlides(-1)">❮</a>
+                    <a class="next" onclick="plusSlides(1)">❯</a>
+                </div>
             {% else %}
+                There are no images!
             {% endif %}
         </div>
 
-        <div>
-            <h2>Rating: {{ rating }}</h2>
-            <!-- JS and CSS -->
-            <button id="ratingBtn">Rate</button>
+        <div class="Right">
+            <h2>Rating: </h2>
+            {{ toilet.rating.rating__avg }}
+            <a href="{% url 'rate' toilet.b_slug %}"><button>Rate</button></a>
+
             <h2>Comments: </h2>
-            <!-- JS and CSS -->
-            {% if interaction %}
-                {% for comment in interaction %}
+            {% if comments %}
+                {% for comment in comments %}
+                    {{ comment }}
                 {% endfor %}
             {% else %}
                 There are no comments yet, make a comment...
             {% endif %}
-            <button id="commentBtn">Comment</button>
-        </div>
-        <div class="modal-content">
-            <div id="ratingModal" class="modal">
-                <fieldset class="rating">
-                    <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
-                    <input type="radio" id="star4half" name="rating" value="4 and a half" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-                    <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-                    <input type="radio" id="star3half" name="rating" value="3 and a half" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-                    <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
-                    <input type="radio" id="star2half" name="rating" value="2 and a half" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-                    <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
-                    <input type="radio" id="star1half" name="rating" value="1 and a half" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-                    <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
-                    <input type="radio" id="starhalf" name="rating" value="half" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
-                </fieldset>
-                <span class="close">&times;</span>
-            </div>
-            <div class="modal" id="commentModal">
-                <textarea>Make your comment...</textarea>
-                <input type="submit" value="Submit">
-                <span class="close">&times;</span>
-            </div>
-        </div>
-
-        <div>
-            <li style="list-style: none;"><a href="{% url 'index' %}">Home</a></li>
+            <a href="{% url 'comment' toilet.b_slug %}"><button>Comment</button></a>
         </div>
 
     {% endif %}
 
-{% endblock %}
-
-{% block script_block %}
-    <script src="{% static 'modal.js' %}"></script>
 {% endblock %}
