--- a/templates/project/add_toilet.html
+++ b/templates/project/add_toilet.html
@@ -2,25 +2,18 @@
 {% load staticfiles %}
 
 {% block body_block %}
-    <h1>Add a Toilet</h1>
+    <h1 align="center">Add a Toilet</h1>
 
-    <! create toilet >
-    <div>
-    </div>
-
-    <! cancel >
-    <div>
-        <li><a href="{% url 'index' %}">Cancel</a></li>
-    </div>
-
-    <div>
-        <form id="bathroom_form" method="post" action="/project/add_toilet/">
+    <div align="center">
+        <form id="bathroom_form" name="bathroomform" method="post" >
             {% csrf_token %}
             {% for hidden in form.hidden_fields %}
+            <br>
                 {{ hidden }}
             {% endfor %}
 
             {% for field in form.visible_fields %}
+            <br>
                 {{ field.errors }}
                 {{ field.help_text }}
                 {{ field }}
