--- a/templates/project/base.html
+++ b/templates/project/base.html
@@ -2,21 +2,58 @@
 {% load staticfiles %}
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static "css/base.css" %}">
+        {% block style_block %}
+        {% endblock %}
         <meta charset="UTF-8">
         <title>
             {%  block title_block %}
                 Rate yo' uni
             {%  endblock %}
         </title>
-        {% block style_block %}
-        {% endblock %}
     </head>
     <body>
+    <div id="header">
+        <h1><strong>Rate Yo Uni</strong></h1>
+    </div>
+
+    <div id="menubar" align="center">
+        <div id="home" class="menuitem"><a href="{% url 'index' %} ">Home</a> </div>
+        <div id ="add" class="menuitem"><a href="{% url 'add_toilet' %}">Add New Toilet</a></div>
+        {% if user.is_authenticated %}
+            <div id="signout" class="menuitem"><a href="{% url 'sign_out' %}">Sign Out</a></div>
+        {% else %}
+            <div id="signin" class="menuitem"><a href="{% url 'sign_in' %}">Sign In</a></div>
+            <div id="signup" class="menuitem"><a href="{% url 'sign_up' %}">Sign Up</a></div>
+        {% endif %}
+
+        <div id="searchbar">
+            <form name="searchform"  method="post" onsubmit="submitSearch(global)">
+                {% csrf_token %}
+                <input type="text" id ="search_bar" name="search_bar" placeholder="Search for toilet...">
+                <input type="submit" style="display: none;" />
+            </form>
+        </div>
+    </div>
+
+    <div id="content" >
         {%  block body_block %}
 
         {% endblock %}
+    </div>
+
+    <script>
+        function submitSearch() {
+
+            window.localStorage.setItem("searchterm", document.getElementById('search_bar').value);
+            alert(document.getElementById("search_bar").value);
+            window.localStorage.setItem("ongoingsearchquery", true);
+            alert(localStorage.getItem("searchterm"));
+            window.location.href = {% url 'index' %};
+
+        }
         {% block script_block %}
         {% endblock %}
+    </script>
     </body>
 </html>
