updated css, bug fixes, unapplied gender filter

--- a/templates/project/home.html
+++ b/templates/project/home.html
@@ -13,12 +13,19 @@
                 <input id="search_box" type="text" name="search_box" placeholder="Search here..."><br>
                 Sort on:
                 <select name="select_sort">
-                    <option value="name">ABC</option>
+                    <option value="name" selected="selected">ABC</option>
                     <option value="-rating">Rating</option>
                 </select>
 
-
-                <input type="submit" name="searchsubmit" value="search_request" style="display: none;"/>
+                <!--        not working gender filter
+                <select name="select_gender">
+                    <option value="NoF" selected="selected">No Filter</option>
+                    <option value="N">Neutral</option>
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
+                </select>
+                -->
+                <input type="submit" name="searchsubmit" value="Submit filter" />
             </form>
         </div>
 
