--- a/templates/project/add_toilet.html
+++ b/templates/project/add_toilet.html
@@ -2,32 +2,36 @@
 {% load staticfiles %}
 
 {% block body_block %}
+    <link rel="stylesheet" href="{% static "css/add_toilet.css" %}">
     <h1 align="center">Add a Toilet</h1>
 
     <! create toilet >
-    <div>
-    </div>
+    <div id="add_toilet_content">
 
-    <! cancel >
-    <div>
-        <li><a href="{% url 'index' %}">Cancel</a></li>
-    </div>
+        <div id=toilet_form" align="center">
+            <form id="bathroom_form" name="bathroomform" method="post" >
+                {% csrf_token %}
+                {% for hidden in form.hidden_fields %}
+                    {{ hidden }}
+                {% endfor %}
 
-    <div align="center">
-        <form id="bathroom_form" name="bathroomform" method="post" >
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
+                {% for field in form.visible_fields %}
+                <br>
+                    {{ field.errors }}
+                    {{ field.help_text }}
+                    <br>
+                    {{ field }}
+                {% endfor %}
+                <br>
+                <br>
+                <input type="submit" name="submit" value="Add Toilet"/>
+            </form>
             <br>
-                {{ hidden }}
-            {% endfor %}
-
-            {% for field in form.visible_fields %}
             <br>
-                {{ field.errors }}
-                {{ field.help_text }}
-                {{ field }}
-            {% endfor %}
-            <input type="submit" name="submit" value="Add Toilet"/>
-        </form>
+            <div id="cancel">
+                <a href="{% url 'index' %}">Cancel</a>
+            </div>
+
+        </div>
     </div>
 {% endblock %}
