--- a/templates/project/comment.html
+++ b/templates/project/comment.html
@@ -9,10 +9,10 @@
 
     <form method="post" id="comment-form">
         {% csrf_token %}
-        <input type="text" value="{{ user }}" id="user" hidden>
-        <input type="text" value="{{ toilet }}" id="bathroom" hidden>
+        <input type="text" value="{{ user }}" name="user" hidden>
+        <input type="text" value="{{ toilet }}" name="bathroom" hidden>
         Comment:
-        <textarea id="comment"></textarea>
+        <textarea name="comment"></textarea>
         <input type="submit" name="submit" value="Add comment"/>
     </form>
     <a href="{% url 'show_toilet' toilet.b_slug %}">Go Back</a>
