--- a/templates/project/rate.html
+++ b/templates/project/rate.html
@@ -10,8 +10,8 @@
         {% if toilet %}
             <form id="rating_form" method="post" action="/RateYoUni/bathrooms/{{ toilet.b_slug }}/rate/">
                 {% csrf_token %}
-                <input type="text" value="{{ user }}" id="user" style="visibility: hidden">
-                <input type="text" value="{{ toilet }}" id="bathroom" style="visibility: hidden">
+                <input type="text" value="{{ user }}" name="user" hidden>
+                <input type="text" value="{{ toilet }}" name="bathroom" hidden>
                 <label>Rate: </label> <input type="number" name="rating">
                 <input type="submit" name="submit" value="Add rating"/>
             </form>
